# aqbanking

./: .cvsignore  .gitignore  .gitignore.old  .travis.yml  0BUILD  AUTHORS  COPYING  ChangeLog  ChangeLog.old  Doxyfile.in  Makefile.am  Makefile.cvs  NEWS  README  README.aqbanking6  TODO  aqbanking-config-version.cmake.in  aqbanking-config.cmake.in  aqbanking-config.in.in  aqbanking.iss.in  aqbanking.m4  aqbanking.pc.in  aqbanking.spec.in  configure.ac  gource.sh  meson.build  meson_options.txt  mksymlinks.sh.in  system.h.in  version.h.in  vg_aqbanking-cli.sh
bindings/python/: Makefile.am  __init__.py  _aqtypes.py  _basetypes.py  aqcodegen  console.py  enum.py  gtkui.py  types.xml
src/: 0BUILD  Makefile.am  meson.build
src/frontends/: Makefile.am
src/frontends/cbanking/: .cvsignore  Makefile.am  cbanking-config.in.in  cbanking.c  cbanking.h  cbanking.m4  cbanking_p.h  progress.c  progress_l.h  progress_p.h  ressource.rc.in  testlib.c
src/frontends/fbanking/: Makefile.am
src/frontends/fbanking/lib/: Makefile.am  banking.cpp  banking.h  banking_p.h  fbanking.cpp  fbanking.h  fbanking.pc.in  ressource.rc.in
src/frontends/g2banking/: .cvsignore  ChangeLog  Makefile.am  g2banking-config.in.in  g2banking.glade  g2banking.m4  gbanking.c  gbanking.h  gbanking_l.h  gbanking_p.h  ressource.rc.in  testlib.c  version.h.in
src/frontends/g2banking/dialogs/: Makefile.am  gbinputbox.c  gbinputbox.h  gbinputbox_l.h  gbinputbox_p.h  gbmsgbox.c  gbmsgbox.h  gbmsgbox_l.h  gbmsgbox_p.h  ginputbox.c  ginputbox.h  ginputbox_p.h  gmsgbox.c  gmsgbox.h  gmsgbox_p.h
src/frontends/g2banking/views/: Makefile.am  gbjobview.c  gbjobview.h  gbjobview_p.h  gbprofileview.c  gbprofileview.h  gbprofileview_p.h  jobview.c  jobview.h  jobview_p.h
src/frontends/g2banking/widgets/: Makefile.am  gbjoblist.c  gbjoblist.h  gbjoblist_p.h  gbprofilelist.c  gbprofilelist.h  gbprofilelist_p.h  gbprogress.c  gbprogress.h  gbprogress_l.h  gbprogress_p.h  gbsimplebox.c  gbsimplebox.h  gbsimplebox_l.h  gbsimplebox_p.h  gprogress.c  gprogress.h  gprogress_p.h  gsimplebox.c  gsimplebox.h  gsimplebox_p.h  joblist.c  joblist.h  joblist_p.h
src/frontends/kbanking/: .cvsignore  ChangeLog  Makefile.am  flagstaff.cpp  flagstaff.h  kbanking-config.in.in  kbanking.cpp  kbanking.h  kbanking.m4  kbanking_p.h  kbflagstaff.cpp  kbflagstaff.h  testlib.cpp  version.h.in  waitcallback.cpp  waitcallback.h
src/frontends/kbanking/dialogs/: Makefile.am  importer.cpp  importer.h  importer.ui  mapaccount.cpp  mapaccount.h  mapaccount.ui  pickstartdate.cpp  pickstartdate.h  pickstartdate.ui  printdialog.cpp  printdialog.h  printdialog.ui  processwatcher.cpp  processwatcher.h  processwatcher.ui  selectbank.cpp  selectbank.h  selectbank.ui  settings.cpp  settings.h  settings.ui
src/frontends/kbanking/po/: Makefile.am  de.po
src/frontends/kbanking/prg/: Makefile.am  banking.cpp  banking.h
src/frontends/kbanking/views/: Makefile.am  jobview.cpp  jobview.h  jobview.ui  kbjobview.cpp  kbjobview.h  kbjobview.ui
src/frontends/q4banking/: .cvsignore
src/frontends/qbanking/: .cvsignore  Makefile.am  banking.cpp  banking.h  qbanking-config.in.in  qbanking.cpp  qbanking.h  qbanking_p.h  qbflagstaff.cpp  qbwaitcallback.cpp  qbwaitcallback.h  qbwcb_progress.cpp  qbwcb_progress.h  testlib.cpp
src/libs/: .gitignore  0BUILD  Makefile.am  ab-value-test.c  ab_value_test  meson.build  testlib.c
src/libs/aqbanking/: .cvsignore  0BUILD  Makefile.am  README  ab-value-test.c  account.c  account.h  account_be.h  account_l.h  account_p.h  account_type.c  account_type.h  bankinfoplugin.c  bankinfoplugin.h  bankinfoplugin_be.h  bankinfoplugin_l.h  bankinfoplugin_p.h  banking.c  banking.h  banking6.c  banking6.h  banking6_be.h  banking6_update.c  banking_account.c  banking_accspec.c  banking_bankinfo.c  banking_bankinfo.h  banking_be.h  banking_cfg.c  banking_cfg.h  banking_compat.c  banking_country.c  banking_deprec.c  banking_dialogs.c  banking_dialogs.h  banking_imex.c  banking_imex.h  banking_info.h  banking_init.c  banking_l.h  (+52 more)
src/libs/aqbanking++/: .cvsignore  Makefile.am  aqbankingpp.rc  aqbankingpp.vcproj  banking.cpp  banking.h  banking_p.h  bprogress.cpp  bprogress.h  cppgui.cpp  cppgui.h  cppgui_p.h  provider.cpp  provider.h  provider_p.h  ressource.rc.in
src/libs/aqbankingpp/: 0BUILD  Makefile.am  accountstatus.hpp  aqbankingppdecl.hpp  balance.hpp  cxxwrap.hpp  stringlist.cpp  stringlist.hpp  testlibcc.cpp  time.hpp  value.hpp
src/libs/cli/: 0BUILD  Makefile.am  helper.c  helper.h
src/libs/plugins/: 0BUILD  Makefile.am  meson.build
src/plugins/: Makefile.am  aqbanking_plugins.c  aqbanking_plugins.h
src/plugins/backends/: Makefile.am
src/plugins/bankinfo/: Makefile.am
src/plugins/crypttoken/: Makefile.am
src/plugins/imexporters/: Makefile.am
src/plugins/parsers/: Makefile.am
src/test/: .cvsignore  .gitignore  Makefile.am  abtest.c  cpptest.cpp  csv.xml  imptest.c  swift.xml  test-dlg-setup.c
src/tools/: 0BUILD  Makefile.am
src/tools/aqbanking-cli/: .gitignore  0BUILD  Makefile.am  accountcmds.c  addsepadebitnote.c  addtransaction.c  af_utils.c  aqebics-tool.c  aqhbci-tool.c  aqofxconnect-tool.c  aqpaypal-tool.c  chkacc.c  chkiban.c  control.c  dbinit.c  dblisttrans.c  dblisttransfers.c  dbrecontrans.c  debitnote.c  debitnotes.c  export.c  fillgaps.c  getdoc.c  globals.h  import.c  listaccs.c  listbal.c  listconfdir.c  listdoc.c  listprofiles.c  listtrans.c  listtransfers.c  main.c  request.c  senddtazv.c  sepadebitnote.c  sepadebitnotes.c  sepaflashdebitnote.c  sepainternaltransfer.c  sepamultijobs.c  (+9 more)
src/tools/aqbanking-tool/: .cvsignore  Makefile.am  README  SICHERHEITSHINWEISE  cbanking.c  cbanking.h  cbanking_p.h  chkacc.c  chkiban.c  chktrans.c  debitnote.c  exec.c  globals.h  import.c  joblog.c  listaccs.c  listbal.c  listtrans.c  main.c  progress.c  progress_l.h  request.c  transfer.c
src/tools/mkdeinfo/: 0BUILD  Makefile.am  mkdeinfo.c
tutorials/: .cvsignore  .gitignore  Makefile.am  README  qtfrontend.cpp  tutorial1.c  tutorial2.c  tutorial3.c  tutorial4.c  tutorial5.c  tutorials.h
(+3809 files in other folders)
